--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +9,7 @@ nav a {
     text-align: center;
     color: #F1FAEE;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -21,12 +24,20 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
 }
 
 body {
     background-color: #F1FAEE;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -42,28 +53,43 @@ nav a:hover {
     background-color: #457B9D;
     color: #F1FAEE;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border: 5px;
 }
 
 .book:hover, .join:hover {
     background-color: #457B9D;
     color: #F1FAEE;
 }
+
 #background {
     background-color: #457B9D;
 }
 
 .msg {
+    margin-top: 100px;
     background-color: #457B9D;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2, .msg p {
     color: #F1FAEE;
 }
 
+.msg p {
+    font-size: 0.8em;
+    padding-bottom: 15px;
+}
+
 footer {
     background-color: #457B9D;
     color: #F1FAEE;
     font-size: 1.2em;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a, footer a:hover {
@@ -75,12 +101,26 @@ footer p a:hover {
     text-decoration: underline;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
+
 .home-title {
     color: #1D3557;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
     color: #1D3557;
+}
+
+h1, h2 {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    margin: 0;
 }
 
 .logo {
@@ -89,8 +129,25 @@ h4 {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
     width: 100%;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #1D3557;
+}
+
+.mountains {
+    margin-top: 100px;
 }
