--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,11 +9,12 @@ nav a {
     text-align: center;
     color: #F1FAEE;
     text-decoration: none;
-    padding: 35px;
+    padding: 32px;
 }
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: #F1FAEE;
 }
 
 .button-box {
@@ -41,11 +42,18 @@ body {
 }
 
 header {
-    background-color: #457B9D;
+    background-color: rgba(69, 123, 157, .5);
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a:hover {
-    background-color: #1D3557;
+    background-color: rgba(29, 53, 87, .8);
     color: #F1FAEE;
 }
 
@@ -57,11 +65,13 @@ nav a:hover {
     padding: 15px 30px;
     margin-top: 50px;
     border: 5px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
     background-color: #457B9D;
     color: #F1FAEE;
+    border-radius: 5px;
 }
 
 #background {
@@ -69,10 +79,12 @@ nav a:hover {
 }
 
 .msg {
-    margin-top: 100px;
-    background-color: #457B9D;
+    background-color: #1D3557;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2, .msg p {
@@ -90,6 +102,9 @@ footer {
     font-size: 1.2em;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a, footer a:hover {
@@ -111,6 +126,35 @@ footer .social img {
     margin-top: 10px;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
 h4 {
     color: #1D3557;
 }
@@ -125,11 +169,30 @@ h2 {
 
 .logo {
     width: 80px;
+    border-radius: 100px;
 }
 
 .icon {
     width: 80px;
     padding-top: 10px;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-img {
@@ -138,6 +201,8 @@ h2 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .rivers-card, .camping-card, .rapids-card {
@@ -146,8 +211,62 @@ h2 {
 
 .card-img {
     border: 10px solid #1D3557;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .mountains {
-    margin-top: 100px;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
