--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -226,6 +226,98 @@ h2 {
     box-shadow: 5px 5px 10px #6f7364;
 }
 
+main {
+    position: relative;
+}
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
+form {
+    /* Center the form on the page */
+    grid-column: 2/10;
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+}
+  
+form ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+form li + li {
+    margin-top: 1em;
+}
+
+form label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+}
+
+form input,
+textarea {
+    /* To make sure that all text fields have the same font settings
+        By default, textareas have a monospace font */
+    font: 1em sans-serif;
+
+    /* Uniform text field size */
+    width: 100%;
+    box-sizing: border-box;
+
+    /* Match form field borders */
+    border: 1px solid #999;
+}
+
+form input:focus,
+textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+}
+
+form textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+
+    /* Provide space to type some text */
+    height: 5em;
+}
+
+form .button {
+    /* Align buttons with the text fields */
+    /* padding-left: 90px; */
+    text-align: center;
+}
+
+form button {
+    /* This extra margin represent roughly the same space as the space
+        between the labels and their text fields */
+    margin-left: 0.5em;
+    background-color: #457B9D;
+    color: #F1FAEE;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    border: 5px;
+    border-radius: 5px;
+}
+
 
 
 
