--- a/it_blog/styles/site-plan.css
+++ b/it_blog/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #E63946;
-  --secondary-color: #F1FAEE;
-  --accent1-color: #A8DADC;
-  --accent2-color: #457B9D;
+  --primary-color: #ffffff;
+  --secondary-color: #f1eeee;
+  --accent1-color: #afacac;
+  --accent2-color: #000000;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roboto";
   --paragraph-font: "Poppins", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #457B9D;  /* headlines on a white background */ 
-  --headline-color-on-color: #F1FAEE; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #457B9D; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #F1FAEE; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #457B9D;
-  --nav-link-color: #A8DADC;
-  --nav-background-color: #E63946;
-  --nav-hover-link-color: #F1FAEE;
-  --nav-hover-background-color: #A8DADC;
+  --headline-color-on-white: #000000;  /* headlines on a white background */ 
+  --headline-color-on-color: #000000; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #000000; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #000000; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #ffffff;
+  --nav-link-color: #000000;
+  --nav-background-color: #ffffff;
+  --nav-hover-link-color: #000000;
+  --nav-hover-background-color: #ffffff;
 }
 
 
