--- a/it_blog/styles/style.css
+++ b/it_blog/styles/style.css
@@ -20,6 +20,56 @@ h1, h2, h3, h4 {
     font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
 
 /* ------------------- Header ------------------- */
 header {
@@ -264,6 +314,7 @@ aside {
 .sub-content {
     background-color: #f1eeee;
     margin: 30px 0;
+    margin-bottom: 50px;
     padding: 40px 0;
     text-align: center;
     border-radius: 30px;
@@ -304,6 +355,7 @@ form button {
 footer {
     padding-top: 30px;
     padding-bottom: 50px;
+    background-color: #f8f5f5;
 }
 
 footer .container {
@@ -335,7 +387,7 @@ footer .container {
 .tags a {
     display: inline-block;
     padding: 5px;
-    background-color: #f1eeee;
+    background-color: #e1dfdf;
     border-radius: 5px;
     margin-right: 10px;
     margin-bottom: 6px;
@@ -367,6 +419,7 @@ footer .container {
 /* Page Content */
 .content-grid {
     margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 .main-content {
@@ -409,3 +462,97 @@ footer .container {
 .footer-content {
     margin-top: 20px;
 }
+
+
+
+
+/* About us page */
+.authors-cards {
+    display: flex;
+    gap: 30px;
+}
+
+.authors h4 {
+    font-size: 20pt;
+}
+
+.author-post {
+    padding: 30px;
+    background-color: #f8f5f5;
+    border-radius: 17px;
+    width: 364px;
+}
+
+.author-post a img {
+    width: 140px;
+    height: 140px;
+    border-radius: 70px;
+}
+
+.author-post .author {
+    font-weight: bold;
+    font-size: 15pt;
+}
+
+.author-post button {
+    height: 35px;
+    width: 115px;
+    border: 0;
+    border-radius: 25px;
+    cursor: pointer;
+    background-color: white;
+}
+
+.message {
+    margin-top: 55px;
+    margin-bottom: 55px;
+}
+
+.message h4 {
+    font-size: 20pt;
+}
+
+.send-uam {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.send-uam form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 30px;
+    border-radius: 20px;
+    background-color: #f8f5f5;
+}
+
+.send-uam form textarea {
+    padding: 5px 10px;
+    height: 100px;
+    width: 300px;
+    border: solid 2px #afacac;
+    border-radius: 15px;
+}
+
+.send-uam form button {
+    height: 35px;
+    width: 115px;
+    border: 0;
+    border-radius: 25px;
+    cursor: pointer;
+    background-color: white;
+    margin: 0;
+}
+
+.send-uam .address-content {
+    padding: 30px;
+    border-radius: 20px;
+    background-color: #f8f5f5;
+}
+
+.send-uam .address-content .main-address {
+    font-weight: bold;
+}
+
+
